Fix spacing between input and SET button

--- a/web-app/client/assets/css/new/main.css
+++ b/web-app/client/assets/css/new/main.css
@@ -1635,6 +1635,7 @@ span.log-icon.complete {
 
 #instancesInput {
    text-align:left;
+   margin-right:5px ! important;
    height: 29px;
    width: 25px;
    color: black;
